# WiFi-Radar

./: README.md  pyproject.toml  requirements.txt
ESP32_CSI_radar/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
ESP32_CSI_radar/docs/: experiment_setup.md  signal_processing.md  troubleshooting.md
ESP32_CSI_radar/host/: README.md  pyproject.toml  requirements.txt
ESP32_CSI_radar/host/examples/: analyse_csv.py  live_plot.py  record_csv.py
ESP32_CSI_radar/host/src/esp32csi/: __init__.py  breathing.py  cli.py  motion.py  parser.py  processing.py  serial_reader.py  visualise.py
ESP32_CSI_radar/host/tests/: test_parser.py  test_processing.py
ESP32_CSI_radar/src/: CMakeLists.txt  Kconfig.projbuild  app_main.c  config.h  serial_output.c  serial_output.h  wifi_csi.c  wifi_csi.h
src/wifi_radar_simulator/: __init__.py  app.py  data_sources.py  gui.py  simulation.py
tests/: test_simulation.py
wifi-csi-sensing-toolkit/: .gitignore  README.md  pyproject.toml  requirements.txt
wifi-csi-sensing-toolkit/data/: README.md
wifi-csi-sensing-toolkit/examples/: generate_synthetic_csi.py  live_visualiser_demo.py  offline_breathing_demo.py  offline_motion_demo.py
wifi-csi-sensing-toolkit/src/wificsi/: __init__.py  cli.py  core.py
wifi-csi-sensing-toolkit/src/wificsi/io/: __init__.py  atheros.py  base.py  esp32.py  generic_csv.py  intel5300.py  nexmon.py  picoscenes.py  simulator.py
wifi-csi-sensing-toolkit/src/wificsi/processing/: __init__.py  breathing.py  calibration.py  features.py  filtering.py  motion.py  spectrogram.py
wifi-csi-sensing-toolkit/src/wificsi/visualisation/: __init__.py  live.py  plots.py
wifi-csi-sensing-toolkit/tests/: test_breathing.py  test_core.py  test_io.py  test_motion.py  test_processing.py  test_simulator.py
wifi-radar-simulator/: .gitignore  README.md
wifi-radar-simulator/src/wifi_radar_simulator/: __init__.py  __main__.py  calibration.py  data_sources.py  gui.py  simulation.py
wifi-radar-simulator/tests/: test_data_sources.py  test_simulation.py
