[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-radar-simulator"
version = "0.1.0"
description = "Educational desktop simulator for WiFi radar concepts."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "wifi-radar-simulator contributors" }
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "PySide6>=6.6"
]

[project.scripts]
wifi-radar-simulator = "wifi_radar_simulator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

