[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-csi-radar-demo-host"
version = "0.1.0"
description = "Host tools for ESP32 Wi-Fi CSI radar experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyserial>=3.5",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
esp32csi = "esp32csi.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
